make change history

12/01/93 3.0 release
10/31/93 fix make.probe stdlib test for preroot systems
	 instrument={insight,purify,sentinel,etc} instead of purify=1 
	 fix VROOT,VOFFSET in 3d
	 add :T=QV: to select defined variables
	 fix pdp11 archive header swapping and alignment -- used by SCO!
	 add break [n], continue [n]
	 handle hp archive member name truncation at 14 rather than 15!
10/11/93 5e inspired upgrade and beta fixes
	 convert multiple metarule prereq pattern A%B to A$(%)B
	 add .DONTCARE. pattern association to intercept don't know how to ...
	 add :P=B: for physical binding
	 -lm : .DONTCARE in makerules for systems that combine it with -lc
	 fix :G=pat: to handle secondary targets
	 fix unbind() to set rule.view=0
09/30/93 bias unique() aliases towards shorter pathnames
	 add .MAKEDONE to correspond with .MAKEINIT
	 .SCAN.* state change causes rescan
	 preserve matches :B:S: if no / in pattern
	 purify=1 adds -g to CCFLAGS rather than replaces CCFLAGS with -g
	 fix += interaction bugs between command line and makefile
	 fix cancel bug that ignored top view state for lower view
09/11/93 fix scan attribute propagation bug that ignored scanrules |OX|
	 fix view+cancel+accept inconsistency where action always triggered
	 add set option=<flag>,<name>[,<type>,<set>] for external options
	 fix rebind/unbind bug that kept old bound name
	 add arclean to [de]select .ARCLEAN files
	 fix binding bug that didn't break it soon enough for r.status==UPDATE
	 fix :A=.MAKE: bug that missed (internal.make.property&P_make)==0
	 fix :P=L[*!]: bug that failed for non-3d views
08/11/93 S|action| (start) and F|action| (finish) added to scan language
	 O|options| now takes delimiter for scan language consistency
	 all scan actions but [OQ] accept [AMR]
	 |O*| sets scan match flags: X inhibits scan propagation
	 no scan propagation for D_scanned files
	 $(<r1 r2 ...) now supported
	 { .ENTRIES .MEMBER .REGULAR .SCANNED } under user control
	 :T=R<tmform-pattern>: added